<resources>
    <string name="app_name">Expenses сontrol</string>
    <string name="current_expenses_fragment">Current expenses</string>
    <string name="enter_income_fragment">Enter income</string>
    
    <string name="available_money_placeholder">%1$s for today</string>

    <string name="enter_field_hint">Enter expense</string>
    <string name="comment_field_hint">Enter comment</string>
    <string name="money_left_label_text">%1$s left until %2$s</string>
    <string name="apply_text">Apply</string>
    <string name="enter_income_hint">Planned income</string>
    <string name="enter_income_explanation">Enter your planned income for the next month. You enter this sum in the beginning of every month for calculating recommended daily expenses.</string>

    <string name="category_supermarkets">Supermarkets</string>
    <string name="category_fun">Fun</string>
    <string name="category_transfers">Transfers</string>
    <string name="category_fast_food">Fast food</string>
    <string name="category_transport">Transport</string>
    <string name="category_house">House</string>
    <string name="category_clothes">Clothes</string>
    <string name="category_sports">Sports</string>
    <string name="category_mandatory_payments">Mandatory</string>
    <string name="category_other">Other</string>

    <string name="absent_expense_parameters_message">Enter expense sum and choose category</string>

    <string name="notification_channel_id" translatable="false">ExpensesControl</string>
    <string name="notification_channel_name">Common notifications</string>
    <string name="notification_title">Don\'t forget about your expenses!</string>
    <string name="notification_text">Write down today\'s spent money using the app</string>

    <string name="statistics_fragment">Statistics fragment</string>
    <string name="statistics_label">Statistics</string>
    <string name="expenses_label">Expenses</string>
    <string name="chip_period">Period</string>
    <string name="chip_category">Category</string>
    <string name="chip_max_sum">Max sum</string>

    <string-array name="categories_array">
        <item>@string/category_supermarkets</item>
        <item>@string/category_fun</item>
        <item>@string/category_transfers</item>
        <item>@string/category_fast_food</item>
        <item>@string/category_transport</item>
        <item>@string/category_house</item>
        <item>@string/category_clothes</item>
        <item>@string/category_sports</item>
        <item>@string/category_mandatory_payments</item>
        <item>@string/category_other</item>
    </string-array>
    <string name="common_sum">Common sum for these expenses is\n%1$s</string>
    <string name="no_matching_items">No items matching this filter</string>
    <string name="no_expenses_for_current_month">No expenses for current month</string>
    <string name="current_day_expenses">Today\'s expenses</string>
    <string name="show_chart_menu_text">Show chart</string>
    <string name="enter_income_screen_title">Planning income</string>
    <string name="enter_expense_screen_title">Enter expenses</string>
    <string name="statistics_screen_title">Expenses statistics</string>
    <string name="incorrect_sum">Minimal amount is $1.00</string>
    <string name="chart_title">Expenses chart</string>
</resources>