<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="com.google.android.material.chip.ChipGroup">

    <com.google.android.material.chip.Chip
        android:id="@+id/chipSupermarkets"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_supermarkets" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipFun"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_fun" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipTransfers"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_transfers" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipFastFood"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_fast_food" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipTransport"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_transport" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipHouse"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_house" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipClothes"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_clothes" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipSports"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_sports" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipMandatory"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_mandatory_payments" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipOther"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_other" />

</merge>