<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/expenses_dest">

    <fragment
        android:id="@+id/expenses_dest"
        android:name="com.artyomefimov.expensescontrol.presentation.view.expenses.EnterExpenseFragment"
        android:label="@string/current_expenses_fragment"
        tools:layout="@layout/fragment_enter_expense">

        <action
            android:id="@+id/action_expensesFragment_to_enterIncomeFragment"
            app:destination="@id/enter_income_dest"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/enter_income_dest"
        android:name="com.artyomefimov.expensescontrol.presentation.view.expenses.EnterIncomeFragment"
        android:label="@string/enter_income_fragment"
        tools:layout="@layout/fragment_enter_income">

        <action
            android:id="@+id/action_enterIncomeFragment_to_expensesFragment"
            app:destination="@id/expenses_dest"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/statistics_dest"
        android:name="com.artyomefimov.expensescontrol.presentation.view.statistics.StatisticsFragment"
        android:label="@string/statistics_fragment"
        tools:layout="@layout/fragment_statistics"/>

</navigation>